@@ -2112,6 +2112,7 @@ void COpenGLDriver::setRenderStates3DMode()
 				Material, LastMaterial, ResetRenderStates, this);
 
 		LastMaterial = Material;
+		CacheHandler->correctCacheMaterial(LastMaterial);
 		ResetRenderStates = false;
 	}
 
@@ -2905,6 +2906,7 @@ void COpenGLDriver::setRenderStates2DMode(bool alpha, bool texture, bool alphaCh
 	setBasicRenderStates(currentMaterial, LastMaterial, resetAllRenderStates);
 
 	LastMaterial = currentMaterial;
+	CacheHandler->correctCacheMaterial(LastMaterial);
 
 	// no alphaChannel without texture
 	alphaChannel &= texture;
